# styx

./: .coveragerc  .dockerignore  .gitignore  404.html  CNAME  LICENSE  README.md  codecov.yml  compression_plg.py  docker-compose-kafka.yml  docker-compose-minio.yml  docker-compose-s3.yml  docker-compose-shopping-cart-demo.yml  docker-compose.yml  index.html  microbench_messaging.py  microbench_phases.py  mkdocs.yml  objects.inv  pytest.ini  requirements.txt  ruff.toml  simple_serde_benchmark.py  sn_playground.py
styx-package/: pyproject.toml  setup.py
styx-package/styx/client/: __init__.py  async_client.py  base_client.py  styx_future.py  sync_client.py
styx-package/styx/common/: base_networking.py  base_operator.py  base_protocol.py  base_state.py  exceptions.py  function.py  local_state_backends.py  logging.py  message_types.py  metrics.py  networking.py  operator.py  protocols.py  run_func_payload.py  serialization.py  stateflow_graph.py  stateflow_ingress.py  stateflow_worker.py  stateful_function.py  tcp_networking.py  types.py
styx-package/styx/common/partitioning/: _hash_partitioner.c  _hash_partitioner.pyx  base_partitioner.py  hash_partitioner.py  range_partitioner.py
styx-package/styx/common/util/: aio_task_scheduler.py
styx-package/styx/local_runner/: README.md  __init__.py  local_context.py  local_state.py  runner.py
styx-package/styx/tests/: test_network_manager.py  test_operator.py  test_operator_private.py  test_socket_pool.py  test_stateflow_graph.py  test_stateful_function.py  test_stateful_function_private.py  test_styx_api.py
(+376 files in other folders)
